--- a/composer.json
+++ b/composer.json
@@ -17,7 +17,7 @@
             "AdminModules\\": "admin_modules"
         }
     },
-    "description": "This package contains datamodel related information for the FAKE \\\"Justitie en veiligheid\\\" created by the Novum Innovation Lab as part of their \"een overheid / one government\" project",
+    "description": "Fake \"Justitie en veiligheid\" domain definition files",
     "homepage": "https://innovatie.app.demo.novum.nu",
     "minimum-stability": "dev",
     "keywords": [
